Added tests and test container serviceConnections.